force-app/main/default/objects/Error_Log__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Asset</description>
    <inlineHelpText>Related Asset</inlineHelpText>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>