force-app/main/default/objects/Error_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>For error messages longer than 255 characters including HTML markup</description>
    <label>Error Message</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>