force-app/main/default/objects/Error_Log__c/listViews/Contract_Process_Errors.listView-meta.xml
<ListView>
    <fullName>Contract_Process_Errors</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Error__c</columns>
    <columns>Error_Type__c</columns>
    <columns>Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Solutionreach</value>
    </filters>
    <label>Contract Process Errors</label>
</ListView>