force-app/main/default/objects/Error_Log__c/listViews/Error_Logs_with_Date.listView-meta.xml
<ListView>
    <fullName>Error_Logs_with_Date</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error__c</columns>
    <filterScope>Everything</filterScope>
    <label>Error Logs with Date</label>
    <sharedTo>
        <group>Admin_Group</group>
        <group>ESR_Managers</group>
        <group>ISR_Managers</group>
    </sharedTo>
</ListView>